# Reschedule-Games

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
reschedule_games/: __init__.py  config.py  dataset.py  features.py  plots.py
reschedule_games/modeling/: predict.py  train.py
