[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reschedule_games"
version = "0.0.1"
description = "Find possible dates to reschedule a game using My Tischtennis season plans."
authors = [
  { name = "TS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["reschedule_games"]
include = ["pyproject.toml", "reschedule_games/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reschedule_games"]
force-sort-within-sections = true

